# file_explorer

./: .gitignore  README.md  file_explorer.docx  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
file_explorer/: __init__.py  event.py  file.py  mapping.py  package.py  package_collection.py  patterns.py  utils.py  validate_package.py
file_explorer/file_data/: __init__.py  data_file.py  parameter_mapping.py
file_explorer/file_explorer_logger/: __init__.py  exporter.py
file_explorer/file_handler/: __init__.py  base.py  basic.py  seabird_ctd.py
file_explorer/file_handler/config/: seabird.yaml
file_explorer/lims/: __init__.py
file_explorer/odv/: odv_file.py
file_explorer/psa/: __init__.py  datcnv.py  derive.py  psa_file_with_plot.py  seasave.py
file_explorer/seabird/: __init__.py  bl_file.py  btl_file.py  cnv_file.py  compare.py  dat_file.py  edit_cnv.py  edit_hdr.py  edit_hex.py  edit_txt.py  hdr_file.py  header_form_file.py  hex_file.py  jpg_file.py  modify_cnv.py  mvp_files.py  paths.py  png_file.py  ros_file.py  txt_file.py  utils.py  xml_file.py  xmlcon_file.py  xmlcon_parser.py
file_explorer/sharkweb/: __init__.py  api.py  physical_chemical.py
file_explorer/tests/: test_cruise.py  test_equal_file.py  test_nr_files_in_package_exclude.py  test_package.py
src/file_explorer/: __init__.py  exceptions.py  file.py  mapping.py  package.py  patterns.py
src/file_explorer/file_data/: data.py  (+3 more)
tests/: test_hdr_file.py  test_instrument_file.py  test_package.py  test_pref_attr.py
tests/test_data/: SBE09_1387_20220613_1800_77SE_11_0511.hex
(+61 files in other folders)
