[project]
name = "file_explorer"
version = "1.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Magnus Wenzer", email = "nodc@smhi.se"},
]
dependencies = [
    "requests>=2.31.0",
    "watchdog>=4.0.0",
    "pandas>=2.2.1",
    "pyyaml>=6.0.1",
    "xlsxwriter>=3.2.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "svepa @ file:///C:/mw/git/refac_sharktools/svepa",
]
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mypkg = ["."]
